cell-renderer-rating: vertically align the rating stars

https://bugzilla.gnome.org/show_bug.cgi?id=735056